{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 18,
  "lineage": "03c27988-d9f6-4310-7c81-d306b57f3faa",
  "resources": [
    {
      "module": "module.internet_gateway_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125535330:internet-gateway/igw-0acc628546db4d35f",
            "id": "igw-0acc628546db4d35f",
            "owner_id": "211125535330",
            "tags": {
              "Name": "redis_igw"
            },
            "tags_all": {
              "Name": "redis_igw"
            },
            "vpc_id": "vpc-0c604e0c20fe62379"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0479519a45afd74",
            "arn": "arn:aws:ec2:ap-south-1:211125535330:elastic-ip/eipalloc-0d0479519a45afd74",
            "domain": "vpc",
            "id": "eipalloc-0d0479519a45afd74",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-111-105-182.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.105.182",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0479519a45afd74",
            "association_id": "eipassoc-08307564a043ea693",
            "connectivity_type": "public",
            "id": "nat-086f522cd24735778",
            "network_interface_id": "eni-0910c24d9e43f85ec",
            "private_ip": "10.0.0.18",
            "public_ip": "3.111.105.182",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b2cf5e7d5bd3825a",
            "tags": {
              "Name": "redis_nat"
            },
            "tags_all": {
              "Name": "redis_nat"
            }
          },
          "dependencies": [
            "module.nat_gateway_module.aws_eip.nat_eip",
            "module.subnet_module.aws_subnet.opensearch_publicsubnet",
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07a60dc7895576a1a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-086f522cd24735778",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a60dc7895576a1a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway_module.aws_eip.nat_eip",
            "module.nat_gateway_module.aws_nat_gateway.nat",
            "module.route_table_module.aws_route_table.private_routetable",
            "module.subnet_module.aws_subnet.opensearch_publicsubnet",
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125535330:route-table/rtb-07a60dc7895576a1a",
            "id": "rtb-07a60dc7895576a1a",
            "owner_id": "211125535330",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "redis_private_routetable"
            },
            "tags_all": {
              "Name": "redis_private_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c604e0c20fe62379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125535330:route-table/rtb-002be40acdb62eff5",
            "id": "rtb-002be40acdb62eff5",
            "owner_id": "211125535330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0acc628546db4d35f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "redis_public_routetable"
            },
            "tags_all": {
              "Name": "redis_public_routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c604e0c20fe62379"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway_module.aws_internet_gateway.igw",
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c10206597a48c908",
            "route_table_id": "rtb-07a60dc7895576a1a",
            "subnet_id": "subnet-06f722d76d11ed29e"
          },
          "dependencies": [
            "module.route_table_module.aws_route_table.private_routetable",
            "module.subnet_module.aws_subnet.opensearch_privatesubnet",
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02032afcb1135ca61",
            "route_table_id": "rtb-07a60dc7895576a1a",
            "subnet_id": "subnet-091960a2ff2c95d01"
          },
          "dependencies": [
            "module.route_table_module.aws_route_table.private_routetable",
            "module.subnet_module.aws_subnet.opensearch_privatesubnet",
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d79847bb95e9a6d6",
            "route_table_id": "rtb-07a60dc7895576a1a",
            "subnet_id": "subnet-05a376874f88ee5c1"
          },
          "dependencies": [
            "module.route_table_module.aws_route_table.private_routetable",
            "module.subnet_module.aws_subnet.opensearch_privatesubnet",
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6933c4f5d1b440b",
            "route_table_id": "rtb-002be40acdb62eff5",
            "subnet_id": "subnet-0b2cf5e7d5bd3825a"
          },
          "dependencies": [
            "module.internet_gateway_module.aws_internet_gateway.igw",
            "module.route_table_module.aws_route_table.public_routetable",
            "module.subnet_module.aws_subnet.opensearch_publicsubnet",
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opensearch_publicsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125535330:security-group/sg-029b6ad13550085cc",
            "description": "Allow port 5601 from my ip only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029b6ad13550085cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "151.225.37.187/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "151.225.37.187/32"
                ],
                "description": "",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              }
            ],
            "name": "redis_public_securitygroup",
            "name_prefix": "",
            "owner_id": "211125535330",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c604e0c20fe62379"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "opensearch_privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125535330:subnet/subnet-06f722d76d11ed29e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f722d76d11ed29e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125535330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redis_privatesubnet1"
            },
            "tags_all": {
              "Name": "redis_privatesubnet1"
            },
            "vpc_id": "vpc-0c604e0c20fe62379"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125535330:subnet/subnet-091960a2ff2c95d01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091960a2ff2c95d01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125535330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redis_privatesubnet2"
            },
            "tags_all": {
              "Name": "redis_privatesubnet2"
            },
            "vpc_id": "vpc-0c604e0c20fe62379"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125535330:subnet/subnet-05a376874f88ee5c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a376874f88ee5c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125535330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redis_privatesubnet3"
            },
            "tags_all": {
              "Name": "redis_privatesubnet3"
            },
            "vpc_id": "vpc-0c604e0c20fe62379"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "opensearch_publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125535330:subnet/subnet-0b2cf5e7d5bd3825a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2cf5e7d5bd3825a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125535330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redis_publicsubnet"
            },
            "tags_all": {
              "Name": "redis_publicsubnet"
            },
            "vpc_id": "vpc-0c604e0c20fe62379"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.opensearch_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "opensearch_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211125535330:vpc/vpc-0c604e0c20fe62379",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/17",
            "default_network_acl_id": "acl-0cef40649083b0130",
            "default_route_table_id": "rtb-0dd31eda11ea71edb",
            "default_security_group_id": "sg-0edc412bb83830f6f",
            "dhcp_options_id": "dopt-036388bf41d547277",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c604e0c20fe62379",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd31eda11ea71edb",
            "owner_id": "211125535330",
            "tags": {
              "Name": "redis_vpc"
            },
            "tags_all": {
              "Name": "redis_vpc"
            }
          }
        }
      ]
    }
  ]
}